No longer obfuscate invokespecial instructions